# xwefax

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  xwefax.glade  xwefax.gladep
doc/: xwefax.html
po/: POTFILES.in  xwefax.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  cat.c  cat.h  common.h  detect.c  detect.h  dft.c  dft.h  display.c  display.h  filters.c  filters.h  interface.c  interface.h  jpeg.c  jpeg.h  main.c  main.h  perseus.c  perseus.h  shared.c  shared.h  sound.c  sound.h  stations.c  stations.h  utils.c  utils.h  wefax.c  wefax.h
xwefax/: stations  xwefax.glade  xwefaxrc
